--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+
+
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -112,7 +116,7 @@ main{
 }
 
 .filled {
-    background-color: black;
+    background-color: rgb(0, 255, 13);
 }
 
 .overlay {
