--- a/src/index2.css
+++ b/src/index2.css
@@ -1,105 +1,101 @@
+
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: "Roboto", sans-serif;
-
-}
-
-html, body {
-    height: 100%;
-    overflow-y: hidden;
-}
-
-
-.container{
-    display: flex;
-    flex-direction: column;
-    height: 100dvh;
-    border: 3px solid black;
-
-}
-
-header {
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-    padding: 20px 10px;
 }
 
 h1 {
-    font-size: 1.2rem;
+   text-align: center;
 }
 
-footer {
-    flex-shrink: 0;
-    padding: 20px;
-   
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.3);
+button {
+    border: none;
+    padding: 10px 10px;
+
+
 }
+
+input {
+    padding: 5px;
+    width: 100%;
+    outline: none;
+}
+
+.add-button {
+    background-color: green;
+    border-radius: 10px;
+
+}
+
 
 .add-item-section{
-    border: 1px black solid;
+
     display: flex;
-    justify-content: space-between;
-    border-radius: 10px;
+    justify-content: center;
+    gap: 10px;
     overflow: hidden;
-    margin-top: 20px;
-}
-
-input{
-    font-size: 1rem;
-    
-    padding: 10px;
+    border: 1px solid lightgray;
     border-radius: 10px;
-}
-p {
-    padding-inline: 5px;
-    word-break: break-word;
+    margin-block: 20px;
+    
 }
 
-#item-input{
-    flex-grow: 1;
-    border-radius: 0;
+#item-input {
     border: none;
 
 }
 
-main {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 20px;
+
+
+.container {
+    width: 100dvw;
+}
+main{
+    padding: 10px;
+}
+
+.list-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
    
-
-
+    gap: 10px;
 }
 
 .list-row{
     display: flex;
-    
-    border: 1px solid black;
-    margin-bottom: 15px;
-    border-radius: 20px;
+    width: 100%;
+
+    border-radius: 10px;
     overflow: hidden;
-  
+    border: 1px solid black;
+    justify-content: center;
+    align-items: center;
+    
+
 }
 
 .list-row p {
-    padding-block: 20px;
-    font-size: 1.2rem;
     flex-grow: 1;
+
+    padding: 10px;
     
 }
 
-button{
-    padding-inline: 10px;
-    font-size: 1rem;
-    border: none;
-    min-height: 50px;
+
+.done{
+    text-decoration: line-through;
 }
 
 .delete-button{
+    align-self: stretch;
+
     background-color: red;
 }
-
 .circle-container{
   
     align-self: stretch;
@@ -110,7 +106,7 @@ button{
     border-right: 1px solid lightgrey;
 }
 
-/* .circle {
+.circle {
     border: 1px solid black;
     width: 15px;
     height: 15px;
@@ -120,8 +116,7 @@ button{
 
 .filled {
     background-color: rgb(0, 255, 13);
-} */
-
+}
 
 .overlay {
     background-color: rgba(0, 0, 0, 0.5);
@@ -142,16 +137,14 @@ button{
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    gap: 20px;
-    text-align: center;
-  
+    align-items: center;
+    gap: 10px;
     
 }
+
 .button-section {
     display: flex;
-    justify-content: space-evenly;
-   
+    gap: 10px;
 }
 
 .button-section button{
@@ -163,13 +156,5 @@ button{
     background-color: white;
 }
 
-.add-button {
-    background-color: green;
-    border-radius: 10px;
 
-}
-
-.done{
-    text-decoration: line-through;
-}
 
