--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ main {
 }
 
 button{
-    padding-inline: 10px;
+    padding-inline: 15px;
     font-size: 1rem;
     border: none;
     min-height: 50px;
@@ -106,7 +106,7 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-inline: 10px;
+    padding-inline: 15px;
     border-right: 1px solid lightgrey;
 }
 
@@ -164,8 +164,9 @@ button{
 }
 
 .add-button {
-    background-color: green;
-    border-radius: 10px;
+    background-color: rgb(0, 0, 0);
+   
+    color: white;
 
 }
 
