--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,7 @@ button{
     height: 100dvh;
     position: fixed;
     top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
