done with changing lists and adding new ones

--- a/src/index2.css
+++ b/src/index2.css
@@ -156,5 +156,10 @@ main{
     background-color: white;
 }
 
+.choose-list-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
