--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,15 @@ html, body {
 header {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
     padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 header p {
-    background-color: aqua;
-    display: inline;    
+
+
+    align-self: flex-end;
+  
 
 }
 
@@ -180,4 +184,5 @@ button{
 .done{
     text-decoration: line-through;
 }
+
 
